--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "Zubs <zubairidrisaweda@gmail.com>",
     "regeditmsc <your_email_here>"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.14",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
+  }
 }
