--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "Blog",
     "Team"
   ],
-  "author": [
-    "Zubs <zubairidrisaweda@gmail.com>",
-    "regeditmsc <your_email_here>"
-  ],
+  "authors": {
+    "Zubs" :"zubairidrisaweda@gmail.com",
+    "regeditmsc" :"efusanyae@gmail.com"
+  },
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.5",
