--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "authors": {
     "Zubs" :"zubairidrisaweda@gmail.com",
-    "regeditmsc" :"efusanyae@gmail.com"
+    "regeditmsc" :"efusanyaae@gmail.com"
   },
   "license": "MIT",
   "dependencies": {
