added some vaidation

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "validator": "^13.5.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
