--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
